--- a/configure.ac
+++ b/configure.ac
@@ -1,3 +1,4 @@
+
 # $Header$ -*-Shell-script-*-
 
 # Purpose: Generate NCO configure script using autoconf build-engine
@@ -334,22 +335,6 @@ AC_ARG_ENABLE(openmp,AS_HELP_STRING([--enable-openmp],[Build NCO with OpenMP [de
 # Enable OpenMP unless told not to
 if ((test "x${enable_openmp}" != 'xno') && (test "x${enable_netcdf4}" = 'xyes')); then
     AC_OPENMP
-		
-		#skatreka++
-		#define USE_GPU 1
-		#If GPU availible, add appropriate offload flag to selected compiler
-		USE_GPU=0
-		if (test $USE_GPU -ne 0); then
-		case ${HOSTNAME} in
-			cori* )
-			case ${CC} in
-				gcc* | g++*) OPENMP_CFLAGS+=" -foffload=nvptx-none"; ;;
-				clang* ) OPENMP_CFLAGS+=" -fopenmp-targets=nvptx64-nvidia-cuda"; ;;
-				#Intel compilers don't support NVIDIA GPU offloading
-			esac
-		esac
-		fi
-		#skatreka--
     AC_SUBST(OPENMP_CFLAGS)
     AC_DEFINE([ENABLE_OPENMP],[1],[Compile operators with OpenMP support])
     AC_MSG_NOTICE([OpenMP support enabled])
@@ -359,7 +344,6 @@ if ((test "x${enable_openmp}" != 'xno') && (test "x${enable_netcdf4}" = 'xyes'))
     # LDFLAGS="${LDFLAGS} ${OPENMP_CFLAGS}"
 fi
 # End OpenMP
-
 
 # Begin DAP support
 echo "Beginning generic tests for DAP support"
@@ -865,7 +849,7 @@ case ${host} in
 	esac
 	case ${CXX} in
 #	    icpc* ) CXXFLAGS="${CXXFLAGS} -cxxlib-icc" ; ;;
-	    #icpc* ) CXXFLAGS="${CXXFLAGS} -cxxlib-gcc" ; ;;
+	    icpc* ) CXXFLAGS="${CXXFLAGS} -cxxlib-gcc" ; ;;
 	esac
 	;;
     mips*-sgi-irix* )
@@ -1119,10 +1103,7 @@ if test "${enable_optimize_custom}" = 'yes'; then
 	    ;;
 	x86_64*-linux* )
 	    case ${CC} in
-		#skatreka++
-		#icc* ) CFLAGS="${CFLAGS} -O3 -axW -mcpu=pentium4"
-		icc* ) CFLAGS="${CFLAGS} -xHost -axHASWELL,KNL"
-		#skatreka--
+		icc* ) CFLAGS="${CFLAGS} -O3 -axW -mcpu=pentium4"
 		    case ${CXX} in
 			icpc* ) CXXFLAGS="${CXXFLAGS} ${CFLAGS}"
 		    esac
@@ -1137,21 +1118,9 @@ if test "${enable_optimize_custom}" = 'yes'; then
 			pgCC* ) CXXFLAGS="${CXXFLAGS} ${CFLAGS}"
 		    esac
 		    ;;
-		#skatreka++	
-		clang* ) CFLAGS="${CFLAGS} -march=native"
-				case ${CXX} in
-			clang* ) CXXFLAGS="{CXXFLAGS} ${CFLAGS}"
-				esac
-				;;
-		gcc* | g++*) CFLAGS="${CFLAGS} -march=native"
-				case ${CXX} in
-			g++* ) CXXFLAGS="${CXXFLAGS} ${CFLAGS}"
-	    	esac
-	    	;;
-			esac
-			;;
-		#skatreka--
-	esac
+	    esac
+	    ;;
+    esac
 fi
 # End enable_optimize_custom
 
@@ -1313,32 +1282,6 @@ LEX_OUTPUT_ROOT="lex.${NCO_YY_PFX}"
 LFLAGS="-P${NCO_YY_PFX}"
 AC_SUBST(LEX_OUTPUT_ROOT)
 AC_SUBST(LFLAGS)
-
-
-#skatreka++
-#Optimization specific compiler flags
-#OPT_CFLAGS=""
-#case ${CC} in
-	#gcc* | g++* ) OPT_CFLAGS+=" -march=native"; ;;
-	#clang* ) OPT_CFLAGS+=" -march=native"; ;;
-	#icc* ) OPT_CFLAGS+=" -xHost";
-	       #OPT_CFLAGS+=" -axHASWELL,KNL"; ;;
-	       ##OPT_CFLAGS+=" -xMIC-AVX512 -axMIC-AVX512"; ;;
-	       ##More options can be added here if processor name is detected
-#esac
-#CFLAGS+="$OPT_CFLAGS"
-#
-#OPT_CXXFLAGS=""
-#case ${CXX} in
-	#g++* ) OPT_CXXFLAGS+=" -march=native"; ;;
-	#clang* ) OPT_CXXFLAGS+=" -march=native"; ;;
-	#icpc* ) OPT_CXXFLAGS+=" -xHost";
-			#OPT_CXXFLAGS+=" -axHASWELL,KNL"; ;;
-		##	OPT_CXXFLAGS+=" -xMIC-AVX512 -axMIC-AVX512"; ;;
-			##More options can be added here if processor name is detected
-#esac
-#CXXFLAGS+="$OPT_CXXFLAGS"
-#skatreka--
 
 # Every autoconf script finishes by calling AC_OUTPUT to generate and run config.status
 AC_OUTPUT
